added::privacy-policy

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  
     </section>
         <!-- Testimonial End -->
 
@@ -629,7 +629,7 @@
                     <div class="col-md-6 col-lg-6">
                         <h4 class="text-white mb-4">Quick Link</h4>
                         <a class="btn btn-link" href="#about">About Us</a>
-                        <a class="btn btn-link" href="">Privacy Policy</a>
+                        <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
                         <a class="btn btn-link" href="">Terms & Condition</a>
                         <a class="btn btn-link" href="">Career</a>
                     </div>
@@ -640,7 +640,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Demo is designed by <a href="https://oscode.co.in" target="_blank">OS-Code</a>
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Demo is designed by <a href="https://oscode.co.in"            ="_blank">OS-Code</a>
                         </div>
                     </div>
                 </div>
